--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,117 +15,7 @@
         <%= render 'svg'%>
       </div>
       <div class="visible-xs-24 visible-xs-block">
-        <ul>
-        <div class="row">
-          <li class="col-xs-8 peintures-colles">
-            <a href="#">
-              <div class="img-category">
-                <div class="gradient-overlay">
-                  <div class="table-cell">
-                    <div class="icon-peintures-colles">
-                    <h3>Peintures & colles</h3>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li class="col-xs-8 enduits">
-            <a href="#">
-              <div class="img-category">
-                <div class="gradient-overlay">
-                  <div class="table-cell">
-                    <div class="icon-peintures-colles">
-                    <h3>Enduits</h3>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li class="col-xs-8 economie-energie">
-            <a href="#">
-              <div class="img-category">
-                <div class="gradient-overlay">
-                  <div class="table-cell">
-                    <div class="icon-peintures-colles">
-                    <h3>Economie d'énergie</h3>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li class="col-xs-8 bois">
-            <a href="#">
-              <div class="img-category">
-                <div class="gradient-overlay">
-                  <div class="table-cell">
-                    <div class="icon-peintures-colles">
-                    <h3>Bois</h3>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li class="col-xs-8 bois">
-            <a href="#">
-              <div class="img-category">
-                <div class="gradient-overlay">
-                  <div class="table-cell">
-                    <div class="icon-peintures-colles">
-                    <h3>Portes & fenêtres</h3>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li class="col-xs-8 production-energie-verte">
-            <a href="#">
-              <div class="img-category">
-                <div class="gradient-overlay">
-                  <div class="table-cell">
-                    <div class="icon-peintures-colles">
-                    <h3>Production d'énergie verte</h3>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li class="col-xs-8 gros-oeuvre">
-            <a href="#">
-              <div class="img-category">
-                <div class="gradient-overlay">
-                  <div class="table-cell">
-                    <div class="icon-peintures-colles">
-                    <h3>Gros oeuvres</h3>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li class="col-xs-8 chauffage">
-            <a href="#">
-              <div class="img-category">
-                <div class="gradient-overlay">
-                  <div class="table-cell">
-                    <div class="icon-peintures-colles">
-                    <h3>Chauffage</h3>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li class="col-xs-8 isolation">
-            <a href="#">
-              <div class="img-category">
-                <div class="gradient-overlay">
-                  <div class="table-cell">
-                    <div class="icon-peintures-colles">
-                    <h3>Isolation</h3>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </li>
-        </div>
+        <%= render 'responsive_categories'%>
       </div>
     </div>
   </div>
