ajout de lien sur le menu

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,7 @@
       </div>
       <ul class="categories">
         <li class="primary-category peinture-colle">
-          <a href="#">Peintures et colles</a>
+          <%= link_to 'Peintures et colles', category_path('peinture-colles') %>
           <ul>
             <li>
               <a href="#">item1</a>
@@ -53,7 +53,7 @@
           </ul>
         </li>
         <li class="primary-category enduit">
-          <a href="#">Enduits</a>
+          <%= link_to 'Enduits', category_path('enduits') %>
           <ul>
             <li>
               <a href="#">item1</a>
