--- a/app/assets/stylesheets/layout/header.scss
+++ b/app/assets/stylesheets/layout/header.scss
@@ -159,7 +159,7 @@ header {
 
     .primary-category{
       display: inline-block;
-      padding:15px 0;
+      padding: 14px 0;
 
       @media screen and (max-width: 769px){
         width: 100%;
@@ -168,7 +168,7 @@ header {
       }
 
       a{
-        padding:0 15px;
+        padding: 16px 15px;
       }
 
       &:hover{
@@ -179,7 +179,7 @@ header {
       >ul{
         display: none;
         position: absolute;
-        top: 102px;
+        top: 100px;
         background: #F2F0F0;
         padding: 20px;
         width: 201px;
