suppression de fichiers js inutile

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
          <form class="searchbox">
-          <input type="search" placeholder="Rechercher un produit, un tutoriel, ..." name="search" class="searchbox-input" onkeyup="buttonUp();" required>
+          <input type="search" placeholder="Rechercher un produit, un tutoriel, ..." name="search" class="searchbox-input" required>
           <button type="submit" class="searchbox-submit"></button>
           <span class="searchbox-icon">
             <i class="fa fa-search"></i>
