--- a/app/views/layouts/partials/_topnavbar.html.erb
+++ b/app/views/layouts/partials/_topnavbar.html.erb
@@ -4,7 +4,7 @@
   <div class="navbar-header">
     <%= link_to admin_path, class: 'navbar-brand' do %>
       <div class="brand-logo">
-        <img src="<%= image_path('logo.png') %>" alt="App Logo" class="img-responsive" />
+        <img src="<%= image_path('logo.svg') %>" alt="App Logo" class="img-responsive" />
       </div>
       <div class="brand-logo-collapsed">
         <img src="<%= image_path('angle/logo-single.png') %>" alt="App Logo" class="img-responsive" />
