--- a/app/views/admin/merchants/edit.html.erb
+++ b/app/views/admin/merchants/edit.html.erb
@@ -21,6 +21,11 @@
                 <%= f.label :description %>
                 <%= f.text_area :description, class: 'form-control' %>
               </div>
+              <div class="form-group">
+                <%= f.label :logo %>
+                <%= image_tag @merchant.logo.url, class: 'media-object img-responsive' %>
+                <%= f.file_field :logo, class: 'form-control' %>
+              </div>
               <%= link_to "Retour", admin_merchants_path, class: 'btn mb-sm btn-danger' %>
               <%= f.submit "Enregistrer", class: "btn mb-sm btn-default" %>
             <% end %>
