--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,54 +1,61 @@
 <h3>Produits</h3>
 
+<div class="row">
+  <div class="col-xs-12">
+    <%= link_to 'Ajouter un produit', new_admin_product_path, class: 'mb-sm btn btn-primary' %>
+  </div>
+</div>
 <div class="table-responsive b0">
-   <table id="datatable1" class="table table-striped table-hover">
-      <thead>
-         <tr>
-            <th style="width:80px">
-               <strong>ID</strong>
-            </th>
-            <th>
-               <strong>IMAGE</strong>
-            </th>
-            <th style="min-width:180px">
-               <strong>NOM</strong>
-            </th>
-            <th>
-               <strong>DESCRIPTION</strong>
-            </th>
-            <th class="text-center">
-               <strong>ACTIVE</strong>
-            </th>
-            <th class="text-center" style="width:150px">
-               <strong>ACTION</strong>
-            </th>
-         </tr>
-      </thead>
-      <tbody>
-        <% @products.each do |product| %>
-         <tr>
-            <td><%= product.id %></td>
-            <td><%= image_tag product.product_images.first.image.url(:thumb), class: 'media-object img-responsive img-circle' %></td>
-            <td><%= product.name %></td>
-            <td><%= product.description.first(120) %>...</td>
-            <td class="text-center">
-               <span class="label label-success">oui</span>
-            </td>
-            <td class="text-center" >
-               <%= link_to product_path(product.slug), class: 'btn btn-sm btn-default' do %>
-                  <em class="fa fa-search"></em>
-               <% end %>
-               <% if can? :edit, Product %>
-                  <%= link_to edit_admin_product_path(product.slug), class: 'btn btn-sm btn-default' do %>
-                     <em class="icon-pencil"></em>
-                  <% end %>
-                  <%= link_to admin_product_path(product.slug), :class => "btn btn-sm btn-default", :id => "delete-product-#{product.id}", :method => :delete,  :data => {:confirm => 'Êtes-vous sûr ?' } do %>
-                     <em class="icon-trash"></em>
-                  <% end %>
-               <% end %>
-            </td>
-         </tr>
-         <% end %>
-      </tbody>
-   </table>
+  <table id="datatable1" class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th style="width:80px">
+          <strong>ID</strong>
+        </th>
+        <th>
+          <strong>IMAGE</strong>
+        </th>
+        <th style="min-width:180px">
+          <strong>NOM</strong>
+        </th>
+        <th>
+          <strong>DESCRIPTION</strong>
+        </th>
+        <th class="text-center">
+          <strong>ACTIVE</strong>
+        </th>
+        <th class="text-center" style="width:150px">
+          <strong>ACTION</strong>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @products.each do |product| %>
+        <tr>
+          <td><%= product.id %></td>
+          <td>
+            <%= image_tag product.product_images.first.image.url(:thumb), class: 'media-object img-responsive img-circle' %>
+          </td>
+          <td><%= product.name %></td>
+          <td><%= product.description.first(120) %>...</td>
+          <td class="text-center">
+            <span class="label label-success">oui</span>
+          </td>
+          <td class="text-center" >
+            <%= link_to product_path(product.slug), class: 'btn btn-sm btn-default' do %>
+              <em class="fa fa-search"></em>
+            <% end %>
+            <% if can? :edit, Product %>
+              <%= link_to edit_admin_product_path(product.slug), class: 'btn btn-sm btn-default' do %>
+                <em class="icon-pencil"></em>
+              <% end %>
+              <%= link_to admin_product_path(product.slug), :class => "btn btn-sm btn-default", :id => "delete-product-#{product.id}", :method => :delete,  :data => {:confirm => 'Êtes-vous sûr ?' } do %>
+                <em class="icon-trash"></em>
+              <% end %>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
