--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -21,6 +21,7 @@
     <div class="col-md-7 col-md-offset-1 product-block">
       <% @product.product_images.each do |product_image| %>
         <%= image_tag 'image_produit.png' %>
+        <%= image_tag product_image.image.url(:web, :product) %>
         <%# image_tag product_image.image %>
       <% end %>
     </div>
