--- a/app/assets/stylesheets/admin/fonts.css.scss
+++ b/app/assets/stylesheets/admin/fonts.css.scss
@@ -35,3 +35,15 @@
   font-style: normal;
 }
 
+/* Weather Icons */
+
+@font-face {
+    font-family: 'GT Walsheim';
+    src: font-url('GT-Walsheim-Bold.otf') format('otf'),
+         font-url('GT-Walsheim-Light.otf') format('otf'),
+         font-url('GT-Walsheim-medium.otf') format('otf'),
+         font-url('GT-Walsheim-Regular.ttf') format('ttf'),
+         font-url('GT-Walsheim-Thin.ttf') format('ttf');
+        
+}
+
