--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -50,13 +50,18 @@
 body{
   padding-top:100px;
   font-size:16px;
-  font-weight: normal;
+  font-weight: 100;
+  font-family: 'GT Walsheim', sans-serif;
 
   @media screen and (max-width: 769px){
     padding-top:50px;
   }
 
   color:#1c1833;
+
+  h1, h2, h3, h4, h5 {
+    font-family: 'GT Walsheim', sans-serif;
+  }
 
   h1{
     font-size:60px;
@@ -73,8 +78,23 @@ body{
     font-weight:600;
   }
 
+  h4{
+    font-size:18px;
+    font-weight:400;
+    color:$green;
+    margin:0;
+  }
+
+  h5{
+    font-size:14px;
+    font-weight:400;
+    text-transform:uppercase;
+    margin:0;
+  }
+
   p, a, span{
     font-size:16px;
+    font-weight: 100;
   }
 
   ul{
@@ -91,7 +111,7 @@ body{
   background-color: $green;
   background-image: none;
   text-shadow: none;
-  border-radius: 5px;
+  border-radius: 30px;
   border: none;
   box-shadow: none;
   color: #fff;
