--- a/app/views/products/_price_bar.html.erb
+++ b/app/views/products/_price_bar.html.erb
@@ -11,14 +11,32 @@
       <span>Stock</span>
       <span class="pull-right">disponible</span>
     </div>
-    <%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
-    <%= f.hidden_field :product_id, value: @product.id %>
+    <div class="product-question">
+      <span>Épaisseur</span>
+      <%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
+      <%= f.hidden_field :product_id, value: @product.id %>
+    </div>
+    <div class="product-question">
+      <span>quantité</span>
+      <%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
+      <%= f.hidden_field :product_id, value: @product.id %>
+    </div>
+    <div class="">
+      <span>prix</span>
+      <span class="pull-right">5,00€ /m2</span>
+    </div>
     <%= f.submit "Ajouter au panier", class: "add-to-cart" %>
   </div>
 </div>
 <div class="customer-product-block">
   <span class="icon-customer-product"></span>
   <span class="text-customer-product">Votre vendeur</span>
-  <div class="select-customer"></div>
+  <div class="select-customer">
+    <img class="img-customer">
+    <span>Smartagro</span>
+    <span>96 % de satisfaits (230 sur 240 clients)</span>
+    <p>« Livraison rapide et produit conforme. Je recommande ! » John Doe, 03/02/16</p>
+    <a href="#">Lire les 26 avis</a>
+  </div>
 </div>
 <% end %>
