--- a/app/views/shared/_tutorial_block.html.erb
+++ b/app/views/shared/_tutorial_block.html.erb
@@ -4,6 +4,6 @@
   	<%= tutorial.resume %>
   </p>
   <%= link_to tutorial_path(tutorial.slug), class: "lien-plus" do %>
-    <span>voir le tutoriel</span>
+    <span>Lire la suite...</span>
   <% end %>
 </div>
