--- a/app/views/home/_responsive_categories.html.erb
+++ b/app/views/home/_responsive_categories.html.erb
@@ -5,7 +5,7 @@
         <div class="gradient-overlay">
           <div class="table-cell">
             <div class="icon-peintures-colles">
-            <h3>Peintures & colles</h3>
+            <h3>Peintures &amp; colles</h3>
           </div>
         </div>
       </div>
@@ -53,7 +53,7 @@
         <div class="gradient-overlay">
           <div class="table-cell">
             <div class="icon-peintures-colles">
-            <h3>Portes & fenêtres</h3>
+            <h3>Portes &amp; fenêtres</h3>
           </div>
         </div>
       </div>
