--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -63,7 +63,7 @@
                <td>
                   <div class="media">
                      <div class="pull-left">
-                        <%= image_tag merchant.logo.url, class: 'media-object img-responsive img-circle' %>
+                        <%= image_tag merchant.logo.thumb.url, class: 'media-object img-responsive img-circle' %>
                      </div>
                      <div class="media-body">
                       <div class="pull-right badge baed-info"><%= merchant.id %></div>
