--- a/app/views/products/_price_bar.html.erb
+++ b/app/views/products/_price_bar.html.erb
@@ -21,7 +21,7 @@
       <%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
       <%= f.hidden_field :product_id, value: @product.id %>
     </div>
-    <div class="">
+    <div class="price">
       <span>prix</span>
       <span class="pull-right">5,00€ /m2</span>
     </div>
@@ -33,7 +33,7 @@
   <span class="text-customer-product">Votre vendeur</span>
   <div class="select-customer">
     <img class="img-customer">
-    <span>Smartagro</span>
+    <h4>Smartagro</h4>
     <span>96 % de satisfaits (230 sur 240 clients)</span>
     <p>« Livraison rapide et produit conforme. Je recommande ! » John Doe, 03/02/16</p>
     <a href="#">Lire les 26 avis</a>
